# fast_sql

./: Cargo.toml
benches/: big_bench.rs
src/: keyword.rs  lib.rs  parser.rs  token.rs
src/ast/: cte.rs  ddl.rs  delete.rs  insert.rs  query.rs  select.rs  statement.rs  update.rs
src/common/: alias.rs  expr.rs  from.rs  group.rs  limit.rs  order.rs  pratt.rs  pratt_parser.rs
src/lexer/: lexer.rs
src/simd_common/: func.rs  mod.rs  sse.rs
tests/: integration_tests.rs
